kubernetes/applications/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: vault.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
